# auto-subtitle

./: .gitignore  Dockerfile  auto_scraper.py  gui_scraper.py  main.py  movies.js  pyproject.toml  scraper.py  studio_crawler.py
.github/workflows/: deploy.yml
scratch/: check_studio.py
